# gengscope

./: .gitignore  LICENSE  README.en.md  README.md
docs/: api-contract.md  (+18 more)
services/api/: .dockerignore  Dockerfile  README.md  TESTING.md  pyproject.toml
services/api/gengscope_api/: cli.py  config.py  demo_seed.py  main.py  worker.py
services/api/gengscope_api/api/: deps.py
services/api/gengscope_api/api/routes/: admin.py  agent.py  artifacts.py  audit_log.py  audits.py  entities.py  health.py  jobs.py  papers.py  reports.py  review.py  signals.py  ui.py
services/api/gengscope_api/clients/: crossref.py  openalex.py
services/api/gengscope_api/db/: models.py  session.py
services/api/gengscope_api/schemas/: admin.py  artifacts.py  audits.py  entities.py  jobs.py  reports.py  review.py
services/api/gengscope_api/services/: artifacts.py  audit_log.py  doi.py  entities.py  entity_cycle.py  events.py  image_audit.py  import_paper.py  jobs.py  metadata_audit.py  numeric_audit.py  provenance.py  reports.py  review.py  risk_card.py  signals.py
services/api/tests/: conftest.py  test_api_loop.py  test_artifact_audit_review.py  test_audit_log_and_security.py  test_cli.py  test_demo_seed.py  test_doi.py  test_entities.py  test_entity_audit_cycle.py  test_events_and_risk.py  test_golden_regression.py  test_health.py  test_image_audit.py  test_import_paper.py  test_jobs.py  test_live_smoke.py  test_metadata_audit_signals.py  test_pdf_image_extraction.py  test_postgres_loop.py  test_report_archive.py  test_retraction_calibration.py  test_skill_case_demo.py  test_ui.py
(+37 files in other folders)
