[project]
name = "gengscope-api"
version = "0.1.0"
description = "Metadata-first API for GengScope paper integrity indexing."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pillow>=10.4",
  "pymupdf>=1.24",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2",
]

[project.scripts]
gengscope = "gengscope_api.cli:main"
gengscope-api = "gengscope_api.cli:main"
gengscope-demo-seed = "gengscope_api.demo_seed:main"
gengscope-worker = "gengscope_api.worker:main"

[tool.setuptools.packages.find]
include = ["gengscope_api*"]
exclude = ["data*", "tests*"]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
  "live: hits external OpenAlex and Crossref APIs",
  "postgres: requires a disposable PostgreSQL database",
]
